--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ES2022", "DOM"],
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "types": ["chrome", "node"],
+    "types": ["chrome", "node", "jest"],
     "declaration": true,
     "declarationMap": true,
     "noEmit": true,
