--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,27 +10,14 @@ jobs:
       fail-fast: false
       matrix:
         node-version:
-          - 16
-          - 14
+          - 24
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - run: npm run test
+      - run: npm run ci
       - uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
-  code_quality:
-    name: Code quality
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-      - run: npm install
-      - run: npm run lint
-      - run: npm run tsc
-      - run: npm run prettier
